--- a/shared/.config/waybar/style.css
+++ b/shared/.config/waybar/style.css
@@ -51,32 +51,5 @@
     border-radius: 1rem;
     margin: 8px 8px 0 8px;
     padding: 8px 16px;
-}
-
-#battery {
-    color: @green;
-}
-
-#battery.charging {
-    color: @yellow;
-}
-
-#battery.warning:not(.charging) {
-    color: @red;
-}
-
-#backlight {
-    color: @teal;
-}
-
-#pulseaudio {
-    color: @sky;
-}
-
-#clock {
-    color: @sapphire;
-}
-
-#bluetooth {
-    color: @blue;
+    color: @lavender;
 }
